--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+elock (0.1-2) asimov; urgency=low
+
+  * ukranian translation
+  * error handling
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Tue, 26 May 2009 17:58:10 +0200
+
 elock (0.1-1) asimov; urgency=low
 
   * first build
