--- a/po/uk.po
+++ b/po/uk.po
@@ -17,5 +17,5 @@ msgstr ""
 
 #: src/elock.c:97
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
-msgstr "Чтобы разблокировать устройство<br>нажмите и удерживайте кнопку \”ОК\”<br>3-4 секунды"
+msgstr "Щоб розблокувати пристрій натисніть та утримуйте кнопку  ”ОК” 3-4 секунди"
 
