--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+elock (0.1-3) asimov; urgency=low
+
+  * new translations
+  * fixed time and battery
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Tue, 02 Jun 2009 16:00:03 +0200
+
 elock (0.1-2) asimov; urgency=low
 
   * ukranian translation
