--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.1-4) asimov; urgency=low
+
+  * made window resizable
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Tue, 16 Jun 2009 17:36:32 +0200
+
 elock (0.1-3) asimov; urgency=low
 
   * new translations
