--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: elock\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
-"POT-Creation-Date: 2009-06-25 18:56+0700\n"
+"POT-Creation-Date: 2009-07-13 01:12+0200\n"
 "PO-Revision-Date: 2009-05-26 10:09+0200\n"
 "Last-Translator: Vladimir <v@v>\n"
 "Language-Team: Russian <openinkpot-l10n@googlegroups.com>\n"
@@ -15,8 +15,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/elock.c:216
+#: src/elock.c:151
+msgid "Keyboard Lock"
+msgstr "Блокировка кнопок"
+
+#: src/elock.c:152
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
-msgstr ""
-"Чтобы разблокировать <br>устройство нажмите<br>и удерживайте<br>кнопку "
-"”ОК”<br>3-4 секунды"
+msgstr "Для снятия блокировки кнопок нажмите \"OK\" и удерживайте 3-4 секунды"
