--- a/po/elock.pot
+++ b/po/elock.pot
@@ -1,20 +1,24 @@
-# SOME DESCRIPTIVE TITLE.
+# elock
 # This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Alexander Kerner <lunohod@openinkpot.org>
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: elock 0.1\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
-"POT-Creation-Date: 2009-06-25 18:56+0700\n"
+"POT-Creation-Date: 2009-07-13 01:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/elock.c:216
+#: src/elock.c:151
+msgid "Keyboard Lock"
+msgstr ""
+
+#: src/elock.c:152
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
 msgstr ""
