--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.2-1) asimov; urgency=low
+
+  * gui redesign
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Mon, 13 Jul 2009 01:26:58 +0200
+
 elock (0.1-4) asimov; urgency=low
 
   * made window resizable
