--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.2-2) asimov; urgency=low
+
+  * fix text layout
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Mon, 13 Jul 2009 19:38:45 +0200
+
 elock (0.2-1) asimov; urgency=low
 
   * gui redesign
