--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.2-3) asimov; urgency=low
+
+  * updated ru and uk translations
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Thu, 16 Jul 2009 22:28:49 +0200
+
 elock (0.2-2) asimov; urgency=low
 
   * fix text layout
