--- a/po/uk.po
+++ b/po/uk.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: elock\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
 "POT-Creation-Date: 2009-07-13 01:12+0200\n"
-"PO-Revision-Date: 2009-05-26 10:09+0200\n"
-"Last-Translator: Vladimir <v@v>\n"
+"PO-Revision-Date: 2009-08-08 19:40+0200\n"
+"Last-Translator: Artem Naluzhnyy <tut@nhamon.com.ua>\n"
 "Language-Team: Ukranian <openinkpot-l10n@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,8 +17,9 @@ msgstr ""
 
 #: src/elock.c:151
 msgid "Keyboard Lock"
-msgstr "Клавіатуру заблоковано"
+msgstr "Пристрій заблоковано"
 
 #: src/elock.c:152
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
 msgstr "Для розблокування пристрою натисніть та утримуйте \"ОК\" протягом 3-4 секунд"
+
