--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.2-4) asimov; urgency=low
+
+  * Ukrainian translation updated.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Tue, 18 Aug 2009 02:54:26 +0700
+
 elock (0.2-3) asimov; urgency=low
 
   * updated ru and uk translations
