--- a/po/bg.po
+++ b/po/bg.po
@@ -2,12 +2,12 @@
 # Copyright (C) 2009 Alexander Kerner <lunohod@openinkpot.org>
 # This file is distributed under the same license as the elock package.
 # Alexander Kerner <lunohod@openinkpot.org>, 2009
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: elock 0.1\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
-"POT-Creation-Date: 2009-07-13 01:12+0200\n"
+"POT-Creation-Date: 2009-09-04 19:36+0700\n"
 "PO-Revision-Date: 2009-06-26 15:06+0300\n"
 "Last-Translator: Васил Бадев <vbadev@gmail.com>\n"
 "Language-Team: Bulgarian <openinkpot-l10n@googlegroups.com>\n"
@@ -15,10 +15,19 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/elock.c:152
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
-msgstr "За да отключите устройството натиснете и задръжте бутона \"OK\" за 3-4 секунди"
+#: src/elock.c:204
+#, fuzzy
+msgid "Press Power button to unlock the device"
+msgstr ""
+"За да отключите устройството натиснете и задръжте бутона \"OK\" за 3-4 "
+"секунди"
 
-#: src/elock.c:151
+#: src/elock.c:209
+msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgstr ""
+"За да отключите устройството натиснете и задръжте бутона \"OK\" за 3-4 "
+"секунди"
+
+#: src/elock.c:212
 msgid "Keyboard Lock"
 msgstr "Блокрана клавиатура"
