--- a/po/pl.po
+++ b/po/pl.po
@@ -2,24 +2,30 @@
 # Copyright (C) 2009 Alexander Kerner <lunohod@openinkpot.org>
 # This file is distributed under the same license as the elock package.
 # Alexander Kerner <lunohod@openinkpot.org>, 2009
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
-"POT-Creation-Date: 2009-07-13 01:12+0200\n"
+"POT-Creation-Date: 2009-09-04 19:36+0700\n"
 "PO-Revision-Date: 2009-06-25 13:00+0200\n"
 "Last-Translator: Tomasz Długosz <tomek3d@gmail.com>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
+"|| n%100>=20) ? 1 : 2);\n"
 
-#: src/elock.c:152
+#: src/elock.c:204
+#, fuzzy
+msgid "Press Power button to unlock the device"
+msgstr "Wciśnij i przytrzymaj \"OK\" 3-4 sekundy aby odblokować czytnik"
+
+#: src/elock.c:209
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
 msgstr "Wciśnij i przytrzymaj \"OK\" 3-4 sekundy aby odblokować czytnik"
 
-#: src/elock.c:151
+#: src/elock.c:212
 msgid "Keyboard Lock"
 msgstr "Blokada klawiatury"
