--- a/po/ru.po
+++ b/po/ru.po
@@ -2,12 +2,12 @@
 # Copyright (C) 2009 Alexander Kerner <lunohod@openinkpot.org>
 # This file is distributed under the same license as the elock package.
 # Alexander Kerner <lunohod@openinkpot.org>, 2009
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: elock\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
-"POT-Creation-Date: 2009-07-13 01:12+0200\n"
+"POT-Creation-Date: 2009-09-04 19:36+0700\n"
 "PO-Revision-Date: 2009-05-26 10:09+0200\n"
 "Last-Translator: Vladimir <v@v>\n"
 "Language-Team: Russian <openinkpot-l10n@googlegroups.com>\n"
@@ -15,10 +15,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/elock.c:151
-msgid "Keyboard Lock"
-msgstr "Клавиатура заблокирована"
+#: src/elock.c:204
+#, fuzzy
+msgid "Press Power button to unlock the device"
+msgstr "Для снятия блокировки кнопок нажмите «OK» и удерживайте 3-4 секунды"
 
-#: src/elock.c:152
+#: src/elock.c:209
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
 msgstr "Для снятия блокировки кнопок нажмите «OK» и удерживайте 3-4 секунды"
+
+#: src/elock.c:212
+msgid "Keyboard Lock"
+msgstr "Клавиатура заблокирована"
