--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+elock (0.3-3) asimov; urgency=low
+
+  * New translations: Belarussian
+  * Updated translations: Russian, German, Chinese, Italian.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Wed, 07 Oct 2009 15:37:05 +0700
+
 elock (0.3-2) asimov; urgency=low
 
   * Theme adjusted to new ecore engine.
