--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+elock (0.3-4) asimov; urgency=low
+
+  * New translation: Latvian
+  * Updated translation: Bulgarian.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Mon, 02 Nov 2009 22:01:03 +0600
+
 elock (0.3-3) asimov; urgency=low
 
   * New translations: Belarussian
