--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.3.6) zelazny; urgency=low
+
+  * Prepare new Azbooka skin
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Mon, 22 Mar 2010 05:53:24 +0600
+
 elock (0.3.5) zelazny; urgency=low
 
   * Fix broken unlock if elock is not hardware-assisted (OI#846)
