Preparing changelog for upload

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.3.8) zelazny; urgency=low
+
+  * Translations updated: French, Russian, Ukrainian.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Wed, 31 Mar 2010 03:21:26 +0700
+
 elock (0.3.7) zelazny; urgency=low
 
   * Translation updated: Ukrainian.
