--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.3.9) zelazny; urgency=low
+
+  * Adjustment to new ecore API
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Sun, 04 Jul 2010 23:21:17 +0200
+
 elock (0.3.8) zelazny; urgency=low
 
   * Translations updated: French, Russian, Ukrainian.
