--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elock (0.3.10) zelazny; urgency=low
+
+  * Switch ecore-con server from LOCAL_USER to LOCAL_SYSTEM
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Sat, 10 Jul 2010 21:15:14 +0200
+
 elock (0.3.9) zelazny; urgency=low
 
   * Adjustment to new ecore API
