--- a/po/en.po
+++ b/po/en.po
@@ -21,7 +21,7 @@ msgstr "Press Power button to unlock the device"
 
 #: src/elock.c:209
 msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
-msgstr "Press and hold \"<b>OK<b>\"<br>for 3-4 seconds<br>to unlock the device"
+msgstr "Press and hold \"<b>OK<b>\" for 3-4 seconds to unlock the device"
 
 #: src/elock.c:212
 msgid "Keyboard Lock"
