--- a/po/de.po
+++ b/po/de.po
@@ -23,5 +23,5 @@ msgid "Press Power button to unlock the device"
 msgstr "Zum Entsperren \"Power\" drücken"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr "Zum Entsperren ca. 3-4 Sekunden lang \"OK\" drücken"
