--- a/po/elock.pot
+++ b/po/elock.pot
@@ -20,7 +20,7 @@ msgid "Press Power button to unlock the device"
 msgstr ""
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr ""
 
 #: src/elock.c:212
