--- a/po/es.po
+++ b/po/es.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr "Mantenga presionado \"OK\" durante 3-4 segundos para desbloquear el dispositivo"
 
 #: src/elock.c:212
