--- a/po/it.po
+++ b/po/it.po
@@ -19,7 +19,7 @@ msgid "Press Power button to unlock the device"
 msgstr "Premi il pulsante di accensione per sbloccare il dispositivo"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr "Tieni premuto \"OK\" 3-4 secondi per sbloccare il dispositivo"
 
 #: src/elock.c:212
