--- a/po/nl.po
+++ b/po/nl.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr "Hou  \"OK\"  ca. 3-4 sec. ingedrukt om te deblokkeren"
 
 #: src/elock.c:212
