--- a/po/pl.po
+++ b/po/pl.po
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
+msgid "Hold OK to unlock"
 msgstr "Wciśnij i przytrzymaj \"OK\" 3-4 sekundy aby odblokować czytnik"
 
 #: src/elock.c:212
