--- a/po/ru.po
+++ b/po/ru.po
@@ -24,5 +24,5 @@ msgid "Press Power button to unlock the device"
 msgstr "Для снятия блокировки<br>нажмите кнопку включения"
 
 #: src/elock.c:209
-msgid "Press and hold \"OK\" for 3-4 seconds to unlock the device"
-msgstr "Для снятия блокировки кнопок<br>нажмите \"<b>OK</b>\"<br>и удерживайте 3-4 секунды"
+msgid "Hold OK to unlock"
+msgstr "Нажмите и держите OK для разблокировки"
